Fix color contrast on checkout page for better readability

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,6 +93,15 @@ h1 {
     font-size: 18px;
 }
 
+/* Checkout page */
+.account-link {
+    color: rgb(51, 94, 211);
+}
+
+.account-link:hover {
+    color: rgb(9, 44, 141);
+}
+
 /* Hide Arrows From Input Number - https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
